Remove locks (#981)
