# api/openapi.yml
@@ -641,116 +641,6 @@ paths:
         404:
           description: Schedule not found
 
-  # Locks
-  /locks/acquire:
-    post:
-      tags:
-        - Locks
-      summary: Acquire lock
-      operationId: acquireLock
-      parameters:
-        - in: header
-          name: request-id
-          description: Unique tracking id
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - resourceId
-                - executionId
-                - processId
-                - ttl
-              properties:
-                resourceId:
-                  type: string
-                executionId:
-                  type: string
-                processId:
-                  type: string
-                ttl:
-                  type: integer
-        required: true
-      responses:
-        201:
-          description: Lock acquired
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Lock"
-        403:
-          description: Lock already acquired
-
-  /locks/release:
-    post:
-      tags:
-        - Locks
-      summary: Release lock
-      operationId: releaseLock
-      parameters:
-        - in: header
-          name: request-id
-          description: Unique tracking id
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - resourceId
-                - executionId
-              properties:
-                resourceId:
-                  type: string
-                executionId:
-                  type: string
-        required: true
-      responses:
-        204:
-          description: Lock released
-        404:
-          description: Lock not found
-
-  /locks/heartbeat:
-    post:
-      tags:
-        - Locks
-      summary: Heartbeat locks
-      operationId: heartbeatLocks
-      parameters:
-        - in: header
-          name: request-id
-          description: Unique tracking id
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - processId
-              properties:
-                processId:
-                  type: string
-        required: true
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  locksAffected:
-                    type: integer
-                    format: int64
-
   # Tasks
   /tasks/claim:
     post:
@@ -1162,27 +1052,6 @@ components:
           type: integer
           format: int64
         createdOn:
-          type: integer
-          format: int64
-
-    # Locks
-    Lock:
-      type: object
-      required:
-        - resourceId
-        - executionId
-        - processId
-        - ttl
-      properties:
-        resourceId:
-          type: string
-        executionId:
-          type: string
-        processId:
-          type: string
-        ttl:
-          type: integer
-        expiresAt:
           type: integer
           format: int64
 
